<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SERVOIRE_Bingo</string>
    <string name="action_settings">Settings</string>
    <string name="startGame">Start new game</string>
    <string name="prevGame">Previous game</string>
    <string name="backMusic">Background music</string>
    <string name="nbDelay">Number delay :</string>
    <string name="tapDl">Tap to download</string>
    <string name="chooseAvatar">Choose avatar</string>
    <string name="changeAvatar">Change your avatar</string>
    <string name="saveSettings">Save</string>
    <string name="cancelSettings">Cancel</string>
    <string name="savePref">Settings saved</string>
    <string name="wrBingo">Wrong bingo !</string>
    <string name="errSavePref">An error happened</string>
    <string name="playAgain">Play again !</string>
    <string name="strReady">Be ready !</string>
</resources>
