<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnStartGame"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="19dp"
        android:text="@string/startGame" />

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnStartGame"
        android:layout_below="@+id/btnStartGame"
        android:layout_marginTop="19dp"
        android:text="@string/action_settings" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSettings"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/prevGame" />

    <ListView
        android:id="@+id/listViewPrev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnSettings"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="25dp" >
    </ListView>

</RelativeLayout>
