<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ToggleButton
        android:id="@+id/toggleMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="28dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/toggleMusic"
        android:layout_alignBottom="@+id/toggleMusic"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/toggleMusic"
        android:text="@string/backMusic" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/toggleMusic"
        android:layout_below="@+id/toggleMusic"
        android:layout_marginTop="10dp"
        android:text="@string/nbDelay" />

    <TextView
        android:id="@+id/textNbDelay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_centerHorizontal="true" />
    
    <SeekBar
        android:id="@+id/seekBarDelay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView2"
        android:background="@drawable/seek_bar"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="15dp"
        android:max="10" />

    <Button
        android:id="@+id/buttonAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/seekBarDelay"
        android:drawableLeft="@drawable/guest_icon_large"
        android:text="@string/chooseAvatar" />



</RelativeLayout >
